fix: update footer time display and adjust logo opacity; add color scheme for dark mode

--- a/src/styles/root.less
+++ b/src/styles/root.less
@@ -35,6 +35,8 @@
     --sectionPaddingYMobile: clamp(1.875rem, 3.91vw, 3.125rem);
 
     --borderRadius: 30px;
+
+    color-scheme: dark;
   }
 
   .font-base {
@@ -258,7 +260,8 @@
   .nav-ul {
     display: flex;
     gap: 0.5rem;
-    a, span {
+    a,
+    span {
       text-decoration: none;
       color: var(--bodyTextColor);
       opacity: 0.6;
